# rabbitmqadmin

./: .gitmodules  README.md  pyproject.toml
examples/: client_example.ipynb
src/rabbitmqadmin/: __init__.py
src/rabbitmqadmin/upstream/: rabbitmqadmin.py  rabbitmqadmin_original.py
